hphp/hack/test/typecheck/reactive/await_in_rx6.php
<?hh // strict

<<__Rx>>
async function f(): Awaitable<int> {
  return 1;
}

async function g(): Awaitable<void> {
  // OK
  $a = genva(f(), f());
}
